# gosc-graph-state-generation

./: .gitignore  2-tile-patch-ver.py  LICENSE  Makefile  README.md  create_random_graph.py  find_order_stablizers.py  kargerMinCut.txt  min_cut.py  min_cut2.py  min_cut3.py  min_cut4.py  min_cut5.py  min_cut6.py  pyproject.toml  setup.cfg  test-2.py  test-refactor.py  two_tile_patch.py  two_tile_patch_refactor.py  two_tile_patch_ver.py  usage_example.py  visualize_result.py
.github/workflows/: coverage.yml  python-publish.yml  style.yml  test.yml
actions/coverage/: action.yml
actions/test/: action.yml
data/: __init__.py  gen_graphs.py  plot_performance_by_density.py  plot_performance_by_kind.py  plot_performance_scale.py  plot_performance_star.py
evaluation/: plot_performance_by_density.py  plot_performance_by_kind.py  plot_performance_scale.py
old_version/: test-2.py  two_tile_patch_ver.py
optimizers/: __init__.py  node_to_patch_mapper.py  pre_mapping_optimizer.py  stabilizer_measurement_scheduler.py
src/graph_state_generation/: min_cut.py  two_tile_patch.py
substrate_scheduler/: substrate_scheduler_two_row.py
tests/: __init__.py  test_pre_mapping_optimizer.py  test_stabilizer_measurement_scheduler.py
tests/graph_state_generation/: test_refactor.py
visualization/: grapht_test.py  gt_test.py  level_test.py  ngastep.py  plot_performance_by_kind.py  profile_gt.py  profile_gt_opt.py  profile_test.py  single_test.py  timestep_ancilla.py  visual.py
visualization/results/: random_tree_10__2023-09-01 11:28:01.068854.csv  (+57 more)
(+29 files in other folders)
